// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateGroupByQuery should generate valid GraphQL query for empty aggregate operations 1`] = `
"
    query DaftarPendudukGroupByAggregates(
      $groupBy: [PendudukGroupByInput!]!
      $filter: PendudukFilterInput
      $orderBy: [PendudukOrderByWithGroupByInput!]
      $viewId: UUID
      $limit: Int
    ) {
      penduduksGroupBy(
        groupBy: $groupBy
        filter: $filter
        orderBy: $orderBy
        viewId: $viewId
        limit: $limit
      ) {
        groupByDimensionValues
      }
    }
  "
`;

exports[`generateGroupByQuery should generate valid GraphQL query for multiple aggregate operations 1`] = `
"
    query DaftarProgramBantuanGroupByAggregates(
      $groupBy: [ProgramBantuanGroupByInput!]!
      $filter: ProgramBantuanFilterInput
      $orderBy: [ProgramBantuanOrderByWithGroupByInput!]
      $viewId: UUID
      $limit: Int
    ) {
      programBantuansGroupBy(
        groupBy: $groupBy
        filter: $filter
        orderBy: $orderBy
        viewId: $viewId
        limit: $limit
      ) {
        groupByDimensionValues
        totalCount
        sumAmountAmountMicros
        avgAmountAmountMicros
      }
    }
  "
`;

exports[`generateGroupByQuery should generate valid GraphQL query for single aggregate operation 1`] = `
"
    query DaftarProgramBantuanGroupByAggregates(
      $groupBy: [ProgramBantuanGroupByInput!]!
      $filter: ProgramBantuanFilterInput
      $orderBy: [ProgramBantuanOrderByWithGroupByInput!]
      $viewId: UUID
      $limit: Int
    ) {
      programBantuansGroupBy(
        groupBy: $groupBy
        filter: $filter
        orderBy: $orderBy
        viewId: $viewId
        limit: $limit
      ) {
        groupByDimensionValues
        sumAmountAmountMicros
      }
    }
  "
`;
